[gd_scene load_steps=3 format=2]

[ext_resource path="res://PropCopy.gd" type="Script" id=1]
[ext_resource path="res://setting icon.png" type="Texture" id=2]

[node name="Prop" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[connection signal="input_event" from="." to="." method="_on_Prop_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Prop_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Prop_mouse_exited"]
